# 100xSolstake

./: README.md
client/: idl.json  package-lock.json  package.json  tsconfig.json
client/src/: client.ts  config.ts  setup.ts
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ClientOnly.tsx  Providers.tsx  StakingInfo.tsx  StakingInterface.tsx  StakingProvider.tsx  WalletContextProvider.tsx  WalletProvider.tsx
frontend/src/idl/: hundred_x_staking.json
frontend/src/lib/: StakingClient.ts
frontend/src/types/: hundred_x_staking_new.ts
hundred_x_staking/: Anchor.toml  Cargo.toml  idl (1).json  package-lock.json  package.json  program-keypair.json  tsconfig.json
hundred_x_staking/programs/hundred_x_staking/: Cargo.toml
hundred_x_staking/programs/hundred_x_staking/src/: lib.rs
hundred_x_staking/tests/: hundred_x_staking.ts
