[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "1.16.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
incremental = false

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 0
debug = true
overflow-checks = true
